2003-06-20  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlUrlResolver.cs : several ResolveUri() fix. e.g. for external URIs.

2003-06-16  Ben Maurer <bmaurer@users.sourceforge.net>
	* XmlUrlResolver.cs: really fixed #44231

2003-06-16  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : fixed MoveToNextAttribute(). In some cases 
	  this method set current node null.
	* XmlTextReader.cs : fixed GetAttribute (name, ns), which returned
	  String.Empty instead of null (expected value).
	* XmlTextReader.cs,
	  XmlUrlResolver.cs,
	  XmlInputStream.cs : fixed BaseURI problem (bug #44231).

2003-06-15  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : this [name] and this [name, ns] (and
	  GetAttribute() methods in turn) returns null instead of String.Empty.
	* XmlTextWriter.cs : WriteStartAttribute() should try to use specified
	  prefix before auto-generating prefixes.
	  Implemented WriteBase64().

2003-06-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : LookupNamespace () has refered invalid current
	  node for attributes. Modified to use private "document" property.

2003-06-10  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlTextWriter.cs: when adding an attribute with a namespace, a prefix must be automaticaly
	  generated, and a namespace declaration must be added. 
	* XmlWriter.cs: the namespace for the prefix xmlns must be http://www.w3.org/2000/xmlns/

2003-06-10  Zoltan Varga  <vargaz@freemail.hu>

	* XmlAttribute.cs: Accept a null prefix or namespaceURI.

2003-06-10  Duncan Mak  <duncan@ximian.com>

	* XmlDocumentNavigator.cs (GetNode): Make it implement
	IHasXmlNode.

2003-06-05  Lluis Sanchez Gual <lluis@ideary.com>

	* XmlTextWriter.cs : Fixed bug. After calling for example WriteStartElement ("pref","ln","ns");
	  a call to LookupPrefix ("pref") when still writting attributes should 
	  return "ns", and it didn't.

2003-06-02  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
